farmer-credit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmer-credit-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: farmer-credit-app
  template:
    metadata:
      labels:
        app: farmer-credit-app
      annotations:
          io.katacontainers.config.runtime.cc_init_data: "YWxnb3JpdGhtID0gInNoYTI1NiIKdmVyc2lvbiA9ICIwLjEuMSIKCltkYXRhXQoiYWEudG9tbCIgPSAnJycKW3Rva2VuX2NvbmZpZ3NdClt0b2tlbl9jb25maWdzLmNvY29fYXNdCnVybCA9ICdodHRwczovL3RydXN0ZWUxLml1ZHguaW86ODA4MCcKClt0b2tlbl9jb25maWdzLmtic10KdXJsID0gJ2h0dHBzOi8vdHJ1c3RlZTEuaXVkeC5pbzo4MDgwJwpjZXJ0ID0gIiIiCi0tLS0tQkVHSU4gQ0VSVElGSUNBVEUtLS0tLQpNSUlEdERDQ0FweWdBd0lCQWdJVVZDZ2cwcXJ1QWdpcFBRbWlVSXpjYU14bmpWNHdEUVlKS29aSWh2Y05BUUVMCkJRQXdkREVMTUFrR0ExVUVCaE1DVlVzeEVEQU [...]
          io.containerd.cri.runtime-handler: kata-remote
    spec:
      runtimeClassName: kata-remote
      containers:
      - name: farmer-credit-app
        image: ghcr.io/datakaveri/farmer-credit-app:p3dx-v1.1-encrypted
        imagePullPolicy: Always
        volumeMounts:
        - name: context
          mountPath: /app/context
          readOnly: false
      volumes:
      - name: context
        configMap:
          name: farmer-credit-app-context
