farmer-credit-svc-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: farmer-credit-app-service
spec:
  selector:
    app: farmer-credit-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farmer-credit-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: coco-demo.iudx.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: farmer-credit-app-service
            port:
              number: 80
